12-ExternalDNS-for-AzureDNS-on-AKS/kube-manifests/02-NginxApp1/03-Ingress-with-ExternalDNS.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginxapp1-ingress-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: eapp1.viq-us.tk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1-nginx-clusterip-service
            port:
              number: 80
